--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven-repo-url.properties
@@ -14,6 +14,8 @@ source.jms=https://@repo-spring-io@/org/springframework/cloud/stream/app/jms-sou
 source.jms.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jms-source-kafka/@jms-source.version@/jms-source-kafka-@jms-source.version@-metadata.jar
 source.load-generator=https://@repo-spring-io@/org/springframework/cloud/stream/app/load-generator-source-kafka/@load-generator-source.version@/load-generator-source-kafka-@load-generator-source.version@.jar
 source.load-generator.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/load-generator-source-kafka/@load-generator-source.version@/load-generator-source-kafka-@load-generator-source.version@-metadata.jar
+source.mail=https://@repo-spring-io@/org/springframework/cloud/stream/app/mail-source-kafka/@mail-source.version@/mail-source-kafka-@mail-source.version@.jar
+source.mail.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mail-source-kafka/@mail-source.version@/mail-source-kafka-@mail-source.version@-metadata.jar
 source.mongodb=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-source-kafka/@mongodb-source.version@/mongodb-source-kafka-@mongodb-source.version@.jar
 source.mongodb.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-source-kafka/@mongodb-source.version@/mongodb-source-kafka-@mongodb-source.version@-metadata.jar
 source.mqtt=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-source-kafka/@mqtt-source.version@/mqtt-source-kafka-@mqtt-source.version@.jar
@@ -24,6 +26,8 @@ source.s3=https://@repo-spring-io@/org/springframework/cloud/stream/app/s3-sourc
 source.s3.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/s3-source-kafka/@s3-source.version@/s3-source-kafka-@s3-source.version@-metadata.jar
 source.sftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-source-kafka/@sftp-source.version@/sftp-source-kafka-@sftp-source.version@.jar
 source.sftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-source-kafka/@sftp-source.version@/sftp-source-kafka-@sftp-source.version@-metadata.jar
+source.syslog=https://@repo-spring-io@/org/springframework/cloud/stream/app/syslog-source-kafka/@syslog-source.version@/syslog-source-kafka-@syslog-source.version@.jar
+source.syslog.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/syslog-source-kafka/@syslog-source.version@/syslog-source-kafka-@syslog-source.version@-metadata.jar
 source.tcp=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-source-kafka/@tcp-source.version@/tcp-source-kafka-@tcp-source.version@.jar
 source.tcp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-source-kafka/@tcp-source.version@/tcp-source-kafka-@tcp-source.version@-metadata.jar
 source.time=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-kafka/@time-source.version@/time-source-kafka-@time-source.version@.jar
@@ -56,12 +60,16 @@ sink.mongodb=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongo
 sink.mongodb.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-sink-kafka/@mongodb-sink.version@/mongodb-sink-kafka-@mongodb-sink.version@-metadata.jar
 sink.mqtt=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-sink-kafka/@mqtt-sink.version@/mqtt-sink-kafka-@mqtt-sink.version@.jar
 sink.mqtt.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-sink-kafka/@mqtt-sink.version@/mqtt-sink-kafka-@mqtt-sink.version@-metadata.jar
+sink.pgcopy=https://@repo-spring-io@/org/springframework/cloud/stream/app/pgcopy-sink-kafka/@pgcopy-sink.version@/pgcopy-sink-kafka-@pgcopy-sink.version@.jar
+sink.pgcopy.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/pgcopy-sink-kafka/@pgcopy-sink.version@/pgcopy-sink-kafka-@pgcopy-sink.version@-metadata.jar
 sink.rabbit=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-sink-kafka/@rabbit-sink.version@/rabbit-sink-kafka-@rabbit-sink.version@.jar
 sink.rabbit.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-sink-kafka/@rabbit-sink.version@/rabbit-sink-kafka-@rabbit-sink.version@-metadata.jar
 sink.redis=https://@repo-spring-io@/org/springframework/cloud/stream/app/redis-sink-kafka/@redis-sink.version@/redis-sink-kafka-@redis-sink.version@.jar
 sink.redis.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/redis-sink-kafka/@redis-sink.version@/redis-sink-kafka-@redis-sink.version@-metadata.jar
 sink.router=https://@repo-spring-io@/org/springframework/cloud/stream/app/router-sink-kafka/@router-sink.version@/router-sink-kafka-@router-sink.version@.jar
 sink.router.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/router-sink-kafka/@router-sink.version@/router-sink-kafka-@router-sink.version@-metadata.jar
+sink.rsocket=https://@repo-spring-io@/org/springframework/cloud/stream/app/rsocket-sink-kafka/@rsocket-sink.version@/rsocket-sink-kafka-@rsocket-sink.version@.jar
+sink.rsocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/rsocket-sink-kafka/@rsocket-sink.version@/rsocket-sink-kafka-@rsocket-sink.version@-metadata.jar
 sink.s3=https://@repo-spring-io@/org/springframework/cloud/stream/app/s3-sink-kafka/@s3-sink.version@/s3-sink-kafka-@s3-sink.version@.jar
 sink.s3.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/s3-sink-kafka/@s3-sink.version@/s3-sink-kafka-@s3-sink.version@-metadata.jar
 sink.sftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-sink-kafka/@sftp-sink.version@/sftp-sink-kafka-@sftp-sink.version@.jar
@@ -78,6 +86,8 @@ sink.twitter-update=https://@repo-spring-io@/org/springframework/cloud/stream/ap
 sink.twitter-update.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-update-sink-kafka/@twitter-update-sink.version@/twitter-update-sink-kafka-@twitter-update-sink.version@-metadata.jar
 sink.websocket=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-sink-kafka/@websocket-sink.version@/websocket-sink-kafka-@websocket-sink.version@.jar
 sink.websocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-sink-kafka/@websocket-sink.version@/websocket-sink-kafka-@websocket-sink.version@-metadata.jar
+processor.aggregator=https://@repo-spring-io@/org/springframework/cloud/stream/app/aggregator-processor-kafka/@aggregator-processor.version@/aggregator-processor-kafka-@aggregator-processor.version@.jar
+processor.aggregator.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/aggregator-processor-kafka/@aggregator-processor.version@/aggregator-processor-kafka-@aggregator-processor.version@-metadata.jar
 processor.bridge=https://@repo-spring-io@/org/springframework/cloud/stream/app/bridge-processor-kafka/@bridge-processor.version@/bridge-processor-kafka-@bridge-processor.version@.jar
 processor.bridge.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/bridge-processor-kafka/@bridge-processor.version@/bridge-processor-kafka-@bridge-processor.version@-metadata.jar
 processor.filter=https://@repo-spring-io@/org/springframework/cloud/stream/app/filter-processor-kafka/@filter-processor.version@/filter-processor-kafka-@filter-processor.version@.jar
