--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-maven.properties
@@ -14,6 +14,8 @@ source.jms=maven://org.springframework.cloud.stream.app:jms-source-kafka:@jms-so
 source.jms.metadata=maven://org.springframework.cloud.stream.app:jms-source-kafka:jar:metadata:@jms-source.version@
 source.load-generator=maven://org.springframework.cloud.stream.app:load-generator-source-kafka:@load-generator-source.version@
 source.load-generator.metadata=maven://org.springframework.cloud.stream.app:load-generator-source-kafka:jar:metadata:@load-generator-source.version@
+source.mail=maven://org.springframework.cloud.stream.app:mail-source-kafka:@mail-source.version@
+source.mail.metadata=maven://org.springframework.cloud.stream.app:mail-source-kafka:jar:metadata:@mail-source.version@
 source.mongodb=maven://org.springframework.cloud.stream.app:mongodb-source-kafka:@mongodb-source.version@
 source.mongodb.metadata=maven://org.springframework.cloud.stream.app:mongodb-source-kafka:jar:metadata:@mongodb-source.version@
 source.mqtt=maven://org.springframework.cloud.stream.app:mqtt-source-kafka:@mqtt-source.version@
@@ -24,6 +26,8 @@ source.s3=maven://org.springframework.cloud.stream.app:s3-source-kafka:@s3-sourc
 source.s3.metadata=maven://org.springframework.cloud.stream.app:s3-source-kafka:jar:metadata:@s3-source.version@
 source.sftp=maven://org.springframework.cloud.stream.app:sftp-source-kafka:@sftp-source.version@
 source.sftp.metadata=maven://org.springframework.cloud.stream.app:sftp-source-kafka:jar:metadata:@sftp-source.version@
+source.syslog=maven://org.springframework.cloud.stream.app:syslog-source-kafka:@syslog-source.version@
+source.syslog.metadata=maven://org.springframework.cloud.stream.app:syslog-source-kafka:jar:metadata:@syslog-source.version@
 source.tcp=maven://org.springframework.cloud.stream.app:tcp-source-kafka:@tcp-source.version@
 source.tcp.metadata=maven://org.springframework.cloud.stream.app:tcp-source-kafka:jar:metadata:@tcp-source.version@
 source.time=maven://org.springframework.cloud.stream.app:time-source-kafka:@time-source.version@
@@ -56,12 +60,16 @@ sink.mongodb=maven://org.springframework.cloud.stream.app:mongodb-sink-kafka:@mo
 sink.mongodb.metadata=maven://org.springframework.cloud.stream.app:mongodb-sink-kafka:jar:metadata:@mongodb-sink.version@
 sink.mqtt=maven://org.springframework.cloud.stream.app:mqtt-sink-kafka:@mqtt-sink.version@
 sink.mqtt.metadata=maven://org.springframework.cloud.stream.app:mqtt-sink-kafka:jar:metadata:@mqtt-sink.version@
+sink.pgcopy=maven://org.springframework.cloud.stream.app:pgcopy-sink-kafka:@pgcopy-sink.version@
+sink.pgcopy.metadata=maven://org.springframework.cloud.stream.app:pgcopy-sink-kafka:jar:metadata:@pgcopy-sink.version@
 sink.rabbit=maven://org.springframework.cloud.stream.app:rabbit-sink-kafka:@rabbit-sink.version@
 sink.rabbit.metadata=maven://org.springframework.cloud.stream.app:rabbit-sink-kafka:jar:metadata:@rabbit-sink.version@
 sink.redis=maven://org.springframework.cloud.stream.app:redis-sink-kafka:@redis-sink.version@
 sink.redis.metadata=maven://org.springframework.cloud.stream.app:redis-sink-kafka:jar:metadata:@redis-sink.version@
 sink.router=maven://org.springframework.cloud.stream.app:router-sink-kafka:@router-sink.version@
 sink.router.metadata=maven://org.springframework.cloud.stream.app:router-sink-kafka:jar:metadata:@router-sink.version@
+sink.rsocket=maven://org.springframework.cloud.stream.app:rsocket-sink-kafka:@rsocket-sink.version@
+sink.rsocket.metadata=maven://org.springframework.cloud.stream.app:rsocket-sink-kafka:jar:metadata:@rsocket-sink.version@
 sink.s3=maven://org.springframework.cloud.stream.app:s3-sink-kafka:@s3-sink.version@
 sink.s3.metadata=maven://org.springframework.cloud.stream.app:s3-sink-kafka:jar:metadata:@s3-sink.version@
 sink.sftp=maven://org.springframework.cloud.stream.app:sftp-sink-kafka:@sftp-sink.version@
@@ -78,6 +86,8 @@ sink.twitter-update=maven://org.springframework.cloud.stream.app:twitter-update-
 sink.twitter-update.metadata=maven://org.springframework.cloud.stream.app:twitter-update-sink-kafka:jar:metadata:@twitter-update-sink.version@
 sink.websocket=maven://org.springframework.cloud.stream.app:websocket-sink-kafka:@websocket-sink.version@
 sink.websocket.metadata=maven://org.springframework.cloud.stream.app:websocket-sink-kafka:jar:metadata:@websocket-sink.version@
+processor.aggregator=maven://org.springframework.cloud.stream.app:aggregator-processor-kafka:@aggregator-processor.version@
+processor.aggregator.metadata=maven://org.springframework.cloud.stream.app:aggregator-processor-kafka:jar:metadata:@aggregator-processor.version@
 processor.bridge=maven://org.springframework.cloud.stream.app:bridge-processor-kafka:@bridge-processor.version@
 processor.bridge.metadata=maven://org.springframework.cloud.stream.app:bridge-processor-kafka:jar:metadata:@bridge-processor.version@
 processor.filter=maven://org.springframework.cloud.stream.app:filter-processor-kafka:@filter-processor.version@
