--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven-repo-url.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven-repo-url.properties
@@ -14,6 +14,8 @@ source.jms=https://@repo-spring-io@/org/springframework/cloud/stream/app/jms-sou
 source.jms.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/jms-source-rabbit/@jms-source.version@/jms-source-rabbit-@jms-source.version@-metadata.jar
 source.load-generator=https://@repo-spring-io@/org/springframework/cloud/stream/app/load-generator-source-rabbit/@load-generator-source.version@/load-generator-source-rabbit-@load-generator-source.version@.jar
 source.load-generator.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/load-generator-source-rabbit/@load-generator-source.version@/load-generator-source-rabbit-@load-generator-source.version@-metadata.jar
+source.mail=https://@repo-spring-io@/org/springframework/cloud/stream/app/mail-source-rabbit/@mail-source.version@/mail-source-rabbit-@mail-source.version@.jar
+source.mail.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mail-source-rabbit/@mail-source.version@/mail-source-rabbit-@mail-source.version@-metadata.jar
 source.mongodb=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-source-rabbit/@mongodb-source.version@/mongodb-source-rabbit-@mongodb-source.version@.jar
 source.mongodb.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-source-rabbit/@mongodb-source.version@/mongodb-source-rabbit-@mongodb-source.version@-metadata.jar
 source.mqtt=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-source-rabbit/@mqtt-source.version@/mqtt-source-rabbit-@mqtt-source.version@.jar
@@ -24,6 +26,8 @@ source.s3=https://@repo-spring-io@/org/springframework/cloud/stream/app/s3-sourc
 source.s3.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/s3-source-rabbit/@s3-source.version@/s3-source-rabbit-@s3-source.version@-metadata.jar
 source.sftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-source-rabbit/@sftp-source.version@/sftp-source-rabbit-@sftp-source.version@.jar
 source.sftp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-source-rabbit/@sftp-source.version@/sftp-source-rabbit-@sftp-source.version@-metadata.jar
+source.syslog=https://@repo-spring-io@/org/springframework/cloud/stream/app/syslog-source-rabbit/@syslog-source.version@/syslog-source-rabbit-@syslog-source.version@.jar
+source.syslog.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/syslog-source-rabbit/@syslog-source.version@/syslog-source-rabbit-@syslog-source.version@-metadata.jar
 source.tcp=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-source-rabbit/@tcp-source.version@/tcp-source-rabbit-@tcp-source.version@.jar
 source.tcp.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/tcp-source-rabbit/@tcp-source.version@/tcp-source-rabbit-@tcp-source.version@-metadata.jar
 source.time=https://@repo-spring-io@/org/springframework/cloud/stream/app/time-source-rabbit/@time-source.version@/time-source-rabbit-@time-source.version@.jar
@@ -56,12 +60,16 @@ sink.mongodb=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongo
 sink.mongodb.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mongodb-sink-rabbit/@mongodb-sink.version@/mongodb-sink-rabbit-@mongodb-sink.version@-metadata.jar
 sink.mqtt=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-sink-rabbit/@mqtt-sink.version@/mqtt-sink-rabbit-@mqtt-sink.version@.jar
 sink.mqtt.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/mqtt-sink-rabbit/@mqtt-sink.version@/mqtt-sink-rabbit-@mqtt-sink.version@-metadata.jar
+sink.pgcopy=https://@repo-spring-io@/org/springframework/cloud/stream/app/pgcopy-sink-rabbit/@pgcopy-sink.version@/pgcopy-sink-rabbit-@pgcopy-sink.version@.jar
+sink.pgcopy.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/pgcopy-sink-rabbit/@pgcopy-sink.version@/pgcopy-sink-rabbit-@pgcopy-sink.version@-metadata.jar
 sink.rabbit=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-sink-rabbit/@rabbit-sink.version@/rabbit-sink-rabbit-@rabbit-sink.version@.jar
 sink.rabbit.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/rabbit-sink-rabbit/@rabbit-sink.version@/rabbit-sink-rabbit-@rabbit-sink.version@-metadata.jar
 sink.redis=https://@repo-spring-io@/org/springframework/cloud/stream/app/redis-sink-rabbit/@redis-sink.version@/redis-sink-rabbit-@redis-sink.version@.jar
 sink.redis.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/redis-sink-rabbit/@redis-sink.version@/redis-sink-rabbit-@redis-sink.version@-metadata.jar
 sink.router=https://@repo-spring-io@/org/springframework/cloud/stream/app/router-sink-rabbit/@router-sink.version@/router-sink-rabbit-@router-sink.version@.jar
 sink.router.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/router-sink-rabbit/@router-sink.version@/router-sink-rabbit-@router-sink.version@-metadata.jar
+sink.rsocket=https://@repo-spring-io@/org/springframework/cloud/stream/app/rsocket-sink-rabbit/@rsocket-sink.version@/rsocket-sink-rabbit-@rsocket-sink.version@.jar
+sink.rsocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/rsocket-sink-rabbit/@rsocket-sink.version@/rsocket-sink-rabbit-@rsocket-sink.version@-metadata.jar
 sink.s3=https://@repo-spring-io@/org/springframework/cloud/stream/app/s3-sink-rabbit/@s3-sink.version@/s3-sink-rabbit-@s3-sink.version@.jar
 sink.s3.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/s3-sink-rabbit/@s3-sink.version@/s3-sink-rabbit-@s3-sink.version@-metadata.jar
 sink.sftp=https://@repo-spring-io@/org/springframework/cloud/stream/app/sftp-sink-rabbit/@sftp-sink.version@/sftp-sink-rabbit-@sftp-sink.version@.jar
@@ -78,6 +86,8 @@ sink.twitter-update=https://@repo-spring-io@/org/springframework/cloud/stream/ap
 sink.twitter-update.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/twitter-update-sink-rabbit/@twitter-update-sink.version@/twitter-update-sink-rabbit-@twitter-update-sink.version@-metadata.jar
 sink.websocket=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-sink-rabbit/@websocket-sink.version@/websocket-sink-rabbit-@websocket-sink.version@.jar
 sink.websocket.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/websocket-sink-rabbit/@websocket-sink.version@/websocket-sink-rabbit-@websocket-sink.version@-metadata.jar
+processor.aggregator=https://@repo-spring-io@/org/springframework/cloud/stream/app/aggregator-processor-rabbit/@aggregator-processor.version@/aggregator-processor-rabbit-@aggregator-processor.version@.jar
+processor.aggregator.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/aggregator-processor-rabbit/@aggregator-processor.version@/aggregator-processor-rabbit-@aggregator-processor.version@-metadata.jar
 processor.bridge=https://@repo-spring-io@/org/springframework/cloud/stream/app/bridge-processor-rabbit/@bridge-processor.version@/bridge-processor-rabbit-@bridge-processor.version@.jar
 processor.bridge.metadata=https://@repo-spring-io@/org/springframework/cloud/stream/app/bridge-processor-rabbit/@bridge-processor.version@/bridge-processor-rabbit-@bridge-processor.version@-metadata.jar
 processor.filter=https://@repo-spring-io@/org/springframework/cloud/stream/app/filter-processor-rabbit/@filter-processor.version@/filter-processor-rabbit-@filter-processor.version@.jar
