--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-maven.properties
@@ -14,6 +14,8 @@ source.jms=maven://org.springframework.cloud.stream.app:jms-source-rabbit:@jms-s
 source.jms.metadata=maven://org.springframework.cloud.stream.app:jms-source-rabbit:jar:metadata:@jms-source.version@
 source.load-generator=maven://org.springframework.cloud.stream.app:load-generator-source-rabbit:@load-generator-source.version@
 source.load-generator.metadata=maven://org.springframework.cloud.stream.app:load-generator-source-rabbit:jar:metadata:@load-generator-source.version@
+source.mail=maven://org.springframework.cloud.stream.app:mail-source-rabbit:@mail-source.version@
+source.mail.metadata=maven://org.springframework.cloud.stream.app:mail-source-rabbit:jar:metadata:@mail-source.version@
 source.mongodb=maven://org.springframework.cloud.stream.app:mongodb-source-rabbit:@mongodb-source.version@
 source.mongodb.metadata=maven://org.springframework.cloud.stream.app:mongodb-source-rabbit:jar:metadata:@mongodb-source.version@
 source.mqtt=maven://org.springframework.cloud.stream.app:mqtt-source-rabbit:@mqtt-source.version@
@@ -24,6 +26,8 @@ source.s3=maven://org.springframework.cloud.stream.app:s3-source-rabbit:@s3-sour
 source.s3.metadata=maven://org.springframework.cloud.stream.app:s3-source-rabbit:jar:metadata:@s3-source.version@
 source.sftp=maven://org.springframework.cloud.stream.app:sftp-source-rabbit:@sftp-source.version@
 source.sftp.metadata=maven://org.springframework.cloud.stream.app:sftp-source-rabbit:jar:metadata:@sftp-source.version@
+source.syslog=maven://org.springframework.cloud.stream.app:syslog-source-rabbit:@syslog-source.version@
+source.syslog.metadata=maven://org.springframework.cloud.stream.app:syslog-source-rabbit:jar:metadata:@syslog-source.version@
 source.tcp=maven://org.springframework.cloud.stream.app:tcp-source-rabbit:@tcp-source.version@
 source.tcp.metadata=maven://org.springframework.cloud.stream.app:tcp-source-rabbit:jar:metadata:@tcp-source.version@
 source.time=maven://org.springframework.cloud.stream.app:time-source-rabbit:@time-source.version@
@@ -56,12 +60,16 @@ sink.mongodb=maven://org.springframework.cloud.stream.app:mongodb-sink-rabbit:@m
 sink.mongodb.metadata=maven://org.springframework.cloud.stream.app:mongodb-sink-rabbit:jar:metadata:@mongodb-sink.version@
 sink.mqtt=maven://org.springframework.cloud.stream.app:mqtt-sink-rabbit:@mqtt-sink.version@
 sink.mqtt.metadata=maven://org.springframework.cloud.stream.app:mqtt-sink-rabbit:jar:metadata:@mqtt-sink.version@
+sink.pgcopy=maven://org.springframework.cloud.stream.app:pgcopy-sink-rabbit:@pgcopy-sink.version@
+sink.pgcopy.metadata=maven://org.springframework.cloud.stream.app:pgcopy-sink-rabbit:jar:metadata:@pgcopy-sink.version@
 sink.rabbit=maven://org.springframework.cloud.stream.app:rabbit-sink-rabbit:@rabbit-sink.version@
 sink.rabbit.metadata=maven://org.springframework.cloud.stream.app:rabbit-sink-rabbit:jar:metadata:@rabbit-sink.version@
 sink.redis=maven://org.springframework.cloud.stream.app:redis-sink-rabbit:@redis-sink.version@
 sink.redis.metadata=maven://org.springframework.cloud.stream.app:redis-sink-rabbit:jar:metadata:@redis-sink.version@
 sink.router=maven://org.springframework.cloud.stream.app:router-sink-rabbit:@router-sink.version@
 sink.router.metadata=maven://org.springframework.cloud.stream.app:router-sink-rabbit:jar:metadata:@router-sink.version@
+sink.rsocket=maven://org.springframework.cloud.stream.app:rsocket-sink-rabbit:@rsocket-sink.version@
+sink.rsocket.metadata=maven://org.springframework.cloud.stream.app:rsocket-sink-rabbit:jar:metadata:@rsocket-sink.version@
 sink.s3=maven://org.springframework.cloud.stream.app:s3-sink-rabbit:@s3-sink.version@
 sink.s3.metadata=maven://org.springframework.cloud.stream.app:s3-sink-rabbit:jar:metadata:@s3-sink.version@
 sink.sftp=maven://org.springframework.cloud.stream.app:sftp-sink-rabbit:@sftp-sink.version@
@@ -78,6 +86,8 @@ sink.twitter-update=maven://org.springframework.cloud.stream.app:twitter-update-
 sink.twitter-update.metadata=maven://org.springframework.cloud.stream.app:twitter-update-sink-rabbit:jar:metadata:@twitter-update-sink.version@
 sink.websocket=maven://org.springframework.cloud.stream.app:websocket-sink-rabbit:@websocket-sink.version@
 sink.websocket.metadata=maven://org.springframework.cloud.stream.app:websocket-sink-rabbit:jar:metadata:@websocket-sink.version@
+processor.aggregator=maven://org.springframework.cloud.stream.app:aggregator-processor-rabbit:@aggregator-processor.version@
+processor.aggregator.metadata=maven://org.springframework.cloud.stream.app:aggregator-processor-rabbit:jar:metadata:@aggregator-processor.version@
 processor.bridge=maven://org.springframework.cloud.stream.app:bridge-processor-rabbit:@bridge-processor.version@
 processor.bridge.metadata=maven://org.springframework.cloud.stream.app:bridge-processor-rabbit:jar:metadata:@bridge-processor.version@
 processor.filter=maven://org.springframework.cloud.stream.app:filter-processor-rabbit:@filter-processor.version@
@@ -88,6 +98,8 @@ processor.header-enricher=maven://org.springframework.cloud.stream.app:header-en
 processor.header-enricher.metadata=maven://org.springframework.cloud.stream.app:header-enricher-processor-rabbit:jar:metadata:@header-enricher-processor.version@
 processor.http-request=maven://org.springframework.cloud.stream.app:http-request-processor-rabbit:@http-request-processor.version@
 processor.http-request.metadata=maven://org.springframework.cloud.stream.app:http-request-processor-rabbit:jar:metadata:@http-request-processor.version@
+processor.image-recognition=maven://org.springframework.cloud.stream.app:image-recognition-processor-rabbit:@image-recognition-processor.version@
+processor.image-recognition.metadata=maven://org.springframework.cloud.stream.app:image-recognition-processor-rabbit:jar:metadata:@image-recognition-processor.version@
 processor.object-detection=maven://org.springframework.cloud.stream.app:object-detection-processor-rabbit:@object-detection-processor.version@
 processor.object-detection.metadata=maven://org.springframework.cloud.stream.app:object-detection-processor-rabbit:jar:metadata:@object-detection-processor.version@
 processor.semantic-segmentation=maven://org.springframework.cloud.stream.app:semantic-segmentation-processor-rabbit:@semantic-segmentation-processor.version@
