--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/kafka-apps-docker.properties
@@ -6,11 +6,13 @@ source.http=docker:springcloudstream/http-source-kafka:@http-source-docker.tag@
 source.jdbc=docker:springcloudstream/jdbc-source-kafka:@jdbc-source-docker.tag@
 source.jms=docker:springcloudstream/jms-source-kafka:@jms-source-docker.tag@
 source.load-generator=docker:springcloudstream/load-generator-source-kafka:@load-generator-source-docker.tag@
+source.mail=docker:springcloudstream/mail-source-kafka:@mail-source-docker.tag@
 source.mongodb=docker:springcloudstream/mongodb-source-kafka:@mongodb-source-docker.tag@
 source.mqtt=docker:springcloudstream/mqtt-source-kafka:@mqtt-source-docker.tag@
 source.rabbit=docker:springcloudstream/rabbit-source-kafka:@rabbit-source-docker.tag@
 source.s3=docker:springcloudstream/s3-source-kafka:@s3-source-docker.tag@
 source.sftp=docker:springcloudstream/sftp-source-kafka:@sftp-source-docker.tag@
+source.syslog=docker:springcloudstream/syslog-source-kafka:@syslog-source-docker.tag@
 source.tcp=docker:springcloudstream/tcp-source-kafka:@tcp-source-docker.tag@
 source.time=docker:springcloudstream/time-source-kafka:@time-source-docker.tag@
 source.twitter-message=docker:springcloudstream/twitter-message-source-kafka:@twitter-message-source-docker.tag@
@@ -27,9 +29,11 @@ sink.jdbc=docker:springcloudstream/jdbc-sink-kafka:@jdbc-sink-docker.tag@
 sink.log=docker:springcloudstream/log-sink-kafka:@log-sink-docker.tag@
 sink.mongodb=docker:springcloudstream/mongodb-sink-kafka:@mongodb-sink-docker.tag@
 sink.mqtt=docker:springcloudstream/mqtt-sink-kafka:@mqtt-sink-docker.tag@
+sink.pgcopy=docker:springcloudstream/pgcopy-sink-kafka:@pgcopy-sink-docker.tag@
 sink.rabbit=docker:springcloudstream/rabbit-sink-kafka:@rabbit-sink-docker.tag@
 sink.redis=docker:springcloudstream/redis-sink-kafka:@redis-sink-docker.tag@
 sink.router=docker:springcloudstream/router-sink-kafka:@router-sink-docker.tag@
+sink.rsocket=docker:springcloudstream/rsocket-sink-kafka:@rsocket-sink-docker.tag@
 sink.s3=docker:springcloudstream/s3-sink-kafka:@s3-sink-docker.tag@
 sink.sftp=docker:springcloudstream/sftp-sink-kafka:@sftp-sink-docker.tag@
 sink.tasklauncher=docker:springcloudstream/tasklauncher-sink-kafka:@tasklauncher-sink-docker.tag@
@@ -38,6 +42,7 @@ sink.throughput=docker:springcloudstream/throughput-sink-kafka:@throughput-sink-
 sink.twitter-message=docker:springcloudstream/twitter-message-sink-kafka:@twitter-message-sink-docker.tag@
 sink.twitter-update=docker:springcloudstream/twitter-update-sink-kafka:@twitter-update-sink-docker.tag@
 sink.websocket=docker:springcloudstream/websocket-sink-kafka:@websocket-sink-docker.tag@
+processor.aggregator=docker:springcloudstream/aggregator-processor-kafka:@aggregator-processor-docker.tag@
 processor.bridge=docker:springcloudstream/bridge-processor-kafka:@bridge-processor-docker.tag@
 processor.filter=docker:springcloudstream/filter-processor-kafka:@filter-processor-docker.tag@
 processor.groovy=docker:springcloudstream/groovy-processor-kafka:@groovy-processor-docker.tag@
