--- a/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
+++ b/applications/stream-applications-build/stream-applications-descriptor/src/main/resources/META-INF/rabbit-apps-docker.properties
@@ -6,11 +6,13 @@ source.http=docker:springcloudstream/http-source-rabbit:@http-source-docker.tag@
 source.jdbc=docker:springcloudstream/jdbc-source-rabbit:@jdbc-source-docker.tag@
 source.jms=docker:springcloudstream/jms-source-rabbit:@jms-source-docker.tag@
 source.load-generator=docker:springcloudstream/load-generator-source-rabbit:@load-generator-source-docker.tag@
+source.mail=docker:springcloudstream/mail-source-rabbit:@mail-source-docker.tag@
 source.mongodb=docker:springcloudstream/mongodb-source-rabbit:@mongodb-source-docker.tag@
 source.mqtt=docker:springcloudstream/mqtt-source-rabbit:@mqtt-source-docker.tag@
 source.rabbit=docker:springcloudstream/rabbit-source-rabbit:@rabbit-source-docker.tag@
 source.s3=docker:springcloudstream/s3-source-rabbit:@s3-source-docker.tag@
 source.sftp=docker:springcloudstream/sftp-source-rabbit:@sftp-source-docker.tag@
+source.syslog=docker:springcloudstream/syslog-source-rabbit:@syslog-source-docker.tag@
 source.tcp=docker:springcloudstream/tcp-source-rabbit:@tcp-source-docker.tag@
 source.time=docker:springcloudstream/time-source-rabbit:@time-source-docker.tag@
 source.twitter-message=docker:springcloudstream/twitter-message-source-rabbit:@twitter-message-source-docker.tag@
@@ -27,9 +29,11 @@ sink.jdbc=docker:springcloudstream/jdbc-sink-rabbit:@jdbc-sink-docker.tag@
 sink.log=docker:springcloudstream/log-sink-rabbit:@log-sink-docker.tag@
 sink.mongodb=docker:springcloudstream/mongodb-sink-rabbit:@mongodb-sink-docker.tag@
 sink.mqtt=docker:springcloudstream/mqtt-sink-rabbit:@mqtt-sink-docker.tag@
+sink.pgcopy=docker:springcloudstream/pgcopy-sink-rabbit:@pgcopy-sink-docker.tag@
 sink.rabbit=docker:springcloudstream/rabbit-sink-rabbit:@rabbit-sink-docker.tag@
 sink.redis=docker:springcloudstream/redis-sink-rabbit:@redis-sink-docker.tag@
 sink.router=docker:springcloudstream/router-sink-rabbit:@router-sink-docker.tag@
+sink.rsocket=docker:springcloudstream/rsocket-sink-rabbit:@rsocket-sink-docker.tag@
 sink.s3=docker:springcloudstream/s3-sink-rabbit:@s3-sink-docker.tag@
 sink.sftp=docker:springcloudstream/sftp-sink-rabbit:@sftp-sink-docker.tag@
 sink.tasklauncher=docker:springcloudstream/tasklauncher-sink-rabbit:@tasklauncher-sink-docker.tag@
@@ -38,6 +42,7 @@ sink.throughput=docker:springcloudstream/throughput-sink-rabbit:@throughput-sink
 sink.twitter-message=docker:springcloudstream/twitter-message-sink-rabbit:@twitter-message-sink-docker.tag@
 sink.twitter-update=docker:springcloudstream/twitter-update-sink-rabbit:@twitter-update-sink-docker.tag@
 sink.websocket=docker:springcloudstream/websocket-sink-rabbit:@websocket-sink-docker.tag@
+processor.aggregator=docker:springcloudstream/aggregator-processor-rabbit:@aggregator-processor-docker.tag@
 processor.bridge=docker:springcloudstream/bridge-processor-rabbit:@bridge-processor-docker.tag@
 processor.filter=docker:springcloudstream/filter-processor-rabbit:@filter-processor-docker.tag@
 processor.groovy=docker:springcloudstream/groovy-processor-rabbit:@groovy-processor-docker.tag@
