--- a/applications/stream-applications-build/pom.xml
+++ b/applications/stream-applications-build/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>stream-applications-build</artifactId>
-    <version>2020.0.0-SNAPSHOT</version>
+    <version>2020.0.0-M3</version>
     <packaging>pom</packaging>
 
     <parent>
@@ -19,7 +19,7 @@
     </modules>
 
     <properties>
-        <apps.version>3.0.0-SNAPSHOT</apps.version>
+        <apps.version>3.0.0-M3</apps.version>
         <cdc-debezium-source.version>${apps.version}</cdc-debezium-source.version>
         <file-source.version>${apps.version}</file-source.version>
         <ftp-source.version>${apps.version}</ftp-source.version>
