--- a/applications/stream-applications-build/stream-applications-docs/pom.xml
+++ b/applications/stream-applications-build/stream-applications-docs/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.springframework.cloud.stream.app</groupId>
 		<artifactId>stream-applications-build</artifactId>
-		<version>2020.0.0-SNAPSHOT</version>
+		<version>2020.0.0-M3</version>
 	</parent>
 
 	<properties>
