--- a/functions/common/metadata-store-common/pom.xml
+++ b/functions/common/metadata-store-common/pom.xml
@@ -16,7 +16,7 @@
     <properties>
         <aws-java-sdk.version>1.11.439</aws-java-sdk.version>
         <spring-integration-aws.version>2.3.3.RELEASE</spring-integration-aws.version>
-        <spring-integration-hazelcast.version>2.0.0.RELEASE</spring-integration-hazelcast.version>
+        <spring-integration-hazelcast.version>3.0.0-SNAPSHOT</spring-integration-hazelcast.version>
         <curator.version>4.0.1</curator.version>
     </properties>
 
