--- a/applications/sink/pom.xml
+++ b/applications/sink/pom.xml
@@ -33,5 +33,6 @@
         <module>wavefront-sink</module>
         <module>pgcopy-sink</module>
         <module>rsocket-sink</module>
+        <module>elasticsearch-sink</module>
     </modules>
 </project>
