--- a/applications/sink/websocket-sink/pom.xml
+++ b/applications/sink/websocket-sink/pom.xml
@@ -2,18 +2,18 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>websocket-sink</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
-    <name>websocket-sink</name>
-    <description>websocket sink apps</description>
-    <packaging>jar</packaging>
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>3.1.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
+
+    <artifactId>websocket-sink</artifactId>
+    <name>websocket-sink</name>
+    <description>websocket sink apps</description>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -67,12 +67,12 @@
                             </dependencies>
                         </maven>
                     </application>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.springframework.cloud.fn</groupId>
-                            <artifactId>websocket-consumer</artifactId>
-                        </dependency>
-                    </dependencies>
+<!--                    <dependencies>-->
+<!--                        <dependency>-->
+<!--                            <groupId>org.springframework.cloud.fn</groupId>-->
+<!--                            <artifactId>websocket-consumer</artifactId>-->
+<!--                        </dependency>-->
+<!--                    </dependencies>-->
                 </configuration>
             </plugin>
         </plugins>
