--- a/applications/source/rabbit-source/pom.xml
+++ b/applications/source/rabbit-source/pom.xml
@@ -2,18 +2,22 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>rabbit-source</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
-    <name>rabbit-source</name>
-    <description>Rabbit source apps</description>
-    <packaging>jar</packaging>
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>3.1.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
+
+    <artifactId>rabbit-source</artifactId>
+    <name>rabbit-source</name>
+    <description>Rabbit source apps</description>
+    <packaging>jar</packaging>
+
+    <properties>
+        <test-containers-version>1.14.2</test-containers-version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -39,13 +43,13 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
-            <version>${test-containers.version}</version>
+            <version>${test-containers-version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>rabbitmq</artifactId>
-            <version>${test-containers.version}</version>
+            <version>${test-containers-version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
