--- a/functions/common/aws-s3-common/pom.xml
+++ b/functions/common/aws-s3-common/pom.xml
@@ -6,7 +6,7 @@
         <groupId>org.springframework.cloud.fn</groupId>
         <artifactId>spring-functions-parent</artifactId>
         <version>${revision}</version>
-        <relativePath>../../spring-functions-parent/pom.xml</relativePath>
+        <relativePath>../../spring-functions-parent</relativePath>
     </parent>
 
     <artifactId>aws-s3-common</artifactId>
