--- a/release-train/stream-applications-release-train/pom.xml
+++ b/release-train/stream-applications-release-train/pom.xml
@@ -5,13 +5,16 @@
     <artifactId>stream-applications-release-train</artifactId>
     <version>${revision}</version>
     <packaging>pom</packaging>
-
-    <parent>
+   <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
-        <relativePath>../../applications/stream-applications-core/pom.xml</relativePath>
+        <version>3.1.0-SNAPSHOT</version>
+        <relativePath>../stream-applications-core</relativePath>
     </parent>
+
+    <artifactId>stream-applications-build</artifactId>
+    <version>2020.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <modules>
         <module>stream-applications-docs</module>
@@ -19,8 +22,8 @@
     </modules>
 
     <properties>
-        <revision>2020.0.0-SNAPSHOT</revision>
-        <apps.version>3.0.0-SNAPSHOT</apps.version>
+        <revision>2021.0.0-SNAPSHOT</revision>
+        <apps.version>3.1.0-SNAPSHOT</apps.version>
         <cdc-debezium-source.version>${apps.version}</cdc-debezium-source.version>
         <file-source.version>${apps.version}</file-source.version>
         <ftp-source.version>${apps.version}</ftp-source.version>
