--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.springframework.cloud.stream.app</groupId>
 	<artifactId>stream-applications-build</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<name>stream-applications-build</name>
 	<description>Common Parent for Functions and Applications</description>
 	<packaging>pom</packaging>
@@ -40,11 +40,11 @@
 		<nohttp-checkstyle.version>0.0.2.RELEASE</nohttp-checkstyle.version>
 		<disable.nohttp.checks>true</disable.nohttp.checks>
 		<spring-javaformat-checkstyle.version>0.0.7</spring-javaformat-checkstyle.version>
-		<spring-boot.version>2.4.0-M4</spring-boot.version>
+		<spring-boot.version>2.4.0-SNAPSHOT</spring-boot.version>
 		<spring-kafka.version>2.6.0-M1</spring-kafka.version>
 		<spring-rabbit.version>2.2.11.RELEASE</spring-rabbit.version>
-		<spring-cloud-function.version>3.0.9.RELEASE</spring-cloud-function.version>
-		<spring-integration-dependencies.version>5.3.3.BUILD-SNAPSHOT</spring-integration-dependencies.version>
+		<spring-cloud-function.version>3.1.0-SNAPSHOT</spring-cloud-function.version>
+		<spring-integration-dependencies.version>5.4.0-SNAPSHOT</spring-integration-dependencies.version>
 		<test-containers.version>1.15.0-rc2</test-containers.version>
 		<maven-flatten-plugin.version>1.2.5</maven-flatten-plugin.version>
 		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
